--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-
+<head>
 <style>
 body {
-  background-image: url("https://assets.onecompiler.app/436znwxfp/436znypsx/Capture.PNG");
+  background-image: url("https://assets.onecompiler.app/436znwxfp/436znypsx/353296fa-db08-4dd6-8cea-1fb6f7c8a23e.webp");
 }
 h1{
 background-color: #afeeee;
-color:black;
+color: white;
 text-align:center;
 padding: 1em;
 font-size: 50px;
@@ -26,12 +26,12 @@ text-decoration: none;
 }
 nav a:hover{
 background-color: #F4C2C2;
-color:white;
+color: white;
 font-size: 50px;
 word-spacing: 30px;
 }
 p{
-color:white;
+color: white;
 font-size: 40px;
 font-weight: bold;
 text-decoration:underline wavy #F4C2C2 5px;
@@ -46,7 +46,7 @@ text-decoration:underline wavy #F4C2C2 5px;
 
 <p>Select any one of the following subjects:</p>
 <br></br>
-<p>--> History<nav class="w3-bar w3-black"><a href="history.html">HistoryQuiz</a></nav></p>
+<p>--> History  <nav class="w3-bar w3-black"><a href="history.html">HistoryQuiz</a></nav></p>
 <br></br>
 <p>--> General Knowledge<nav class="w3-bar w3-black"><a href="quiz.html">GeneralKnowlegdeQuiz</a></nav></p>
 <br></br>
@@ -54,7 +54,7 @@ text-decoration:underline wavy #F4C2C2 5px;
 <br></br>
 <p>--> Science<nav class="w3-bar w3-black"><a href="scienceqizz.html">ScienceQuiz</a></nav></p>
 <br></br>
-<p><b> Get ready to check your brain power!!!</b><nav class="w3-bar w3-black"><a  href="scoreboard.html">scoreboard</a></nav></p>
+<p><b> Get ready to check your brain power!!!</b><nav class="w3-bar w3-black"><a href="scoreboard.html">Scoreboard</a></nav></p>
 <br></br>
 </body>
 </html>
