--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head>
 <style>
 body {
-  background-image: url("https://assets.onecompiler.app/436znwxfp/436znypsx/353296fa-db08-4dd6-8cea-1fb6f7c8a23e.webp");
+  background-image: url("https://assets.onecompiler.app/437nugt5p/437nuhn9s/WhatsApp%20Image%202025-01-31%20at%209.50.06%20AM.jpeg");
 }
 h1{
-background-color: #afeeee;
-color: white;
+color:#C11B17;
 text-align:center;
 padding: 1em;
 font-size: 50px;
@@ -19,7 +18,7 @@ overflow:visible;
 nav a{
 float: left;
 display: block;
-color:white;
+color:#C11B17;
 text-align: center;
 padding: 14 px16px;
 text-decoration: none;
@@ -31,7 +30,7 @@ font-size: 50px;
 word-spacing: 30px;
 }
 p{
-color: white;
+color:#C11B17;
 font-size: 40px;
 font-weight: bold;
 text-decoration:underline wavy #F4C2C2 5px;
